--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "mongoose": "^4.9.1"
+    "mongoose": "^4.9.1",
+    "angular": "^1.6.3",
+    "angular-route": "^1.6.3",
+    "angular-cookies": "^1.6.3"
   }
 }
